--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "jest": "^26.4.2",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
+    "react-docgen": "^5.3.0",
     "react-test-renderer": "^16.13.1",
     "sass-loader": "^10.0.1",
     "sort-package-json": "^1.44.0",
