--- a/package.json
+++ b/package.json
@@ -46,23 +46,24 @@
     ]
   },
   "dependencies": {
+    "@coopdigital/component-notification": "^1.0.25",
     "@coopdigital/css-foundations": "^5.3.1",
-    "@coopdigital/foundations-buttons": "^2.2.3",
+    "@coopdigital/foundations-buttons": "^2.2.4",
     "@coopdigital/foundations-forms": "^4.0.10",
-    "@coopdigital/foundations-global": "^3.1.11",
-    "@coopdigital/foundations-grid": "^2.0.6",
-    "@coopdigital/foundations-layout": "^3.2.2",
-    "@coopdigital/foundations-typography": "^4.1.11",
-    "@coopdigital/foundations-vars": "^3.2.2",
-    "@coopdigital/shared-component--hero": "^2.1.17",
-    "@coopdigital/shared-component--image": "^2.1.17",
-    "@coopdigital/shared-component--membership": "^3.0.4",
+    "@coopdigital/foundations-global": "^3.1.17",
+    "@coopdigital/foundations-grid": "^2.0.8",
+    "@coopdigital/foundations-layout": "^3.2.3",
+    "@coopdigital/foundations-typography": "^4.1.19",
+    "@coopdigital/foundations-vars": "^3.3.0",
+    "@coopdigital/shared-component--hero": "^2.1.18",
+    "@coopdigital/shared-component--image": "^2.1.18",
+    "@coopdigital/shared-component--membership": "^3.0.6",
     "identity-obj-proxy": "^3.0.0",
     "lint-staged": "^10.4.0",
     "prop-types": "^15.5.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "uuid": "^3.3.3"
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
@@ -73,7 +74,7 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@babel/preset-typescript": "^7.10.1",
-    "@mdx-js/loader": "^1.6.16",
+    "@mdx-js/loader": "^1.6.18",
     "@storybook/addon-a11y": "6.0.22",
     "@storybook/addon-actions": "6.0.22",
     "@storybook/addon-docs": "6.0.22",
@@ -86,11 +87,11 @@
     "@testing-library/react": "^11.0.4",
     "@types/fs-extra": "^9.0.1",
     "@types/styled-components": "^5.1.0",
-    "auto": "^9.50.1",
+    "auto": "^9.54.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
-    "babel-plugin-react-docgen": "^4.1.0",
+    "babel-plugin-react-docgen": "^4.2.0",
     "babel-plugin-styled-components": "^1.10.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-plugin-transform-remove-imports": "^1.4.1",
@@ -100,22 +101,22 @@
     "css-loader": "^4.2.2",
     "dotenv-cli": "^3.1.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "eslint": "^7.1.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "eslint": "^7.10.0",
     "husky": "^4.2.5",
     "jest": "^26.4.2",
-    "mini-css-extract-plugin": "^0.11.2",
+    "mini-css-extract-plugin": "^0.11.3",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.2",
     "react-test-renderer": "^16.13.1",
     "sass-loader": "^10.0.1",
-    "sort-package-json": "^1.44.0",
-    "style-loader": "^1.2.1",
+    "sort-package-json": "^1.46.0",
+    "style-loader": "^1.3.0",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
     "url-loader": "^4.1.0",
-    "webpack": "^4.44.1",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   },
   "peerDependencies": {
